Fix transparent/opaque header z-index so that relative elements no longer show through

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ header {
     height: 85px;
     color: #efe9fa;
     padding-top: 10px;
-    z-index: 2;
+    z-index: 3;
 }
 
 nav {
@@ -165,6 +165,7 @@ nav {
     top: 0;
     height: 95px;
     background: #02040f;
+    z-index: 1;
 }
 
 
@@ -193,6 +194,7 @@ nav {
     position: absolute;
     bottom: 20vh;
     left: 0;
+    z-index: 2;
 }
 
 /* Key points */
@@ -208,7 +210,7 @@ nav {
     text-shadow: 5px 5px #02040f;
     font-style: italic;
     position: relative;
-    bottom: 160px;
+    top: 36vh;
 }
 
 #slogan h2 {
@@ -234,7 +236,7 @@ nav {
     text-align: center;
     font-size: 25px;
     position: relative;
-    bottom: 10px;
+    top: 120px;
 }
 
 .card i {
